sites/all/modules/custom/delicious_import/feed_style.css
.view-content-feed  .views-row {
  margin-bottom: 20px;
  padding-bottom: 10px;
}

.node-twitter-message, .node-delicious-link {
  padding: 10px;
}

.node-twitter-message .group-left, .node-delicious-link .group-left {
  width: 10% !important;
}

.node-twitter-message .group-right, .node-delicious-link .group-right {
  width: 90% !important;
}

.node-twitter-message img {
  float: right;
  margin-right: 10px;
}

.field-name-field-twitter-body p {
  margin-bottom: 0px;
}

.twitter-highlighted-text {
  color: #C27E34;
}

.field-name-post-date {
  color: rgb(187, 185, 185);
  font-size: .9em;
}

.node-delicious-link img {
  float: right;
  margin-right: 20px;
}

.node-delicious-link .field-name-field-tags {
  margin-top: 20px;
  font-size: .9em;
}

.field-name-field-tags {
  color: rgb(187, 185, 185);
}


.zone-header-wrapper {
  margin-top: -10px;
}

.region-header-first {
  background: #E2E2E2;
  padding: 10px;
  box-shadow: inset 0 0px 10px rgb(173, 173, 173);
  border-radius: 3px;
  margin-bottom: 10px;
}

.region-header-first h2.block-title {
  float: left;
  margin-right: 10px;
}

.region-header-first ul {
  padding-top: 5px;
}

.region-header-first ul.menu li {
  display: inline;
}

.region-header-second {
  margin-bottom: 10px;
}

.block-menu-feed-filter a {
  color: rgb(104, 100, 100);
}

.block-menu-feed-filter a.active {
  background: rgb(101, 146, 202);
  padding: 3px;
  border-radius: 2px;
  color: rgb(250, 247, 247);
}

.block-menu-feed-filter a:hover {
  text-decoration: none;
  color: rgb(101, 146, 202);
}

.block-menu-feed-filter a.active:hover {
  color: white;
  background: rgb(79, 115, 160);
}

/** Tag Clouds **/

.region-header-first .block-tagclouds h2 {
  float: none;
  color: rgb(75, 74, 74);
}

.region-header-first .block-tagclouds {
  color: rgb(187, 185, 185);
}

.region-header-first [title="more tags"] {
  display: none;
}

/** Blog Styles **/

.node-blog-post h2 {
  margin-bottom: 0px;
}

.node-blog-post .field-name-submitted-by {
  color: rgb(187, 185, 185);
}

.node-blog-post .field-name-body {
  margin-top: 20px;
  margin-bottom: 20px;
}

.views-row .node-blog-post {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Code Blocks */

pre.prettyprint {
  border-radius: 3px;
  border: 1px solid white;
  font-family: "Consolas", "Monaco";
}

ol.linenums {
  padding-left: 0.5em !important;
}

ol.linenums li {
  list-style-type: decimal;
}

.field-name-field-tags a, .field-name-field-tags a:visited {
  color: rgb(79,115,160) !important;
}

/** Tag form **/
#views-exposed-form-content-feed-page input {
    width: 100%;
}

/** Goodreads **/
.node-goodreads-book .group-left {
  width: 15% !important;
}

